# tradingview-alerts

./: .gitignore  README.md  RELEASING.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy-relay.yml  release-desktop.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: Popover.tsx  Switch.tsx  api.ts  logoCache.ts  main.tsx  styles.css  useRelay.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  dmgbuild_settings.py  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  relay.rs  store.rs  webhook.rs
apps/relay/: .env.example  Dockerfile  docker-compose.yml  fly.toml  package.json
apps/relay/pine-scripts/: volatility_spike_detector.pine
apps/relay/src/: alert.ts  billing.ts  config.ts  db.ts  hub.ts  mail.ts  migrations.ts  server.ts
