# LSUIElement makes this a menu-bar-only (accessory) app: no Dock icon, no app
# menu, no window on launch — and crucially no Dock flash that app.dock.hide()
# would still cause at startup.
[package]
name = "tvalert-desktop"
version = "1.0.4"
edition = "2021"

[lib]
name = "tvalert_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
